--- a/static/css/SeguimientoNutricional.css
+++ b/static/css/SeguimientoNutricional.css
@@ -1,27 +1,29 @@
 body {
-    background-color: #D6D6D6;
+    background-color: #d6d6d6;
     display: grid;
-    grid-template-areas: 
-        "nav content"; 
+    grid-template-areas: "nav content";
     grid-template-columns: 80px auto;
     grid-template-rows: 1fr;
-    padding: 1.5vw; 
+    padding: 1.5vw;
     box-sizing: border-box; /* Asegura que el padding no afecte el tamaño total */
     height: 100vh;
-    margin: 0; 
-}
-
-nav {
-    grid-area: nav; 
+    margin: 0;
+  }
+  
+  nav {
+    grid-area: nav;
     display: flex;
     flex-direction: column;
     background-color: white;
     align-items: center;
-    height: 100%; 
+    height: 100%;
     border-radius: 10px;
-}
+    justify-content: center;
+    gap: 2rem;
+  }
 
-i {
+  .fa-solid::before {
+    font-size: 1.7rem;
     color: grey;
     padding: 10px;
     border-radius: 50%;
@@ -29,29 +31,23 @@ i {
     justify-content: center;
     align-items: center;
     margin-top: 1vw;
-    font-weight: 100vw;
-}
 
-.content {
-    grid-area: content; 
+  }
+  
+  .content {
+    display: grid;
     background-color: #e9f5f9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    height: 100%; 
+    height: 100%;
     border-radius: 10px;
-
-}
-
-
-.active {
-    color: white;
-    background-color: #94A904;
-}
-
-.fa-solid::before   {
-    font-size: 1.7rem;
-}
-
+    grid-template-columns: 1fr 1fr;
+  }
+  
+  .content .box {
+    background-color: rgb(223, 223, 223);
+    border-radius: 1rem;
+    margin: 1rem;
+  }
+  
+  
