--- a/templates/SeguimientoNutricional.html
+++ b/templates/SeguimientoNutricional.html
@@ -1,12 +1,20 @@
-{% extends "base.html" %}
-
-{% block title %}Seguimiento Nutricional{% endblock %}
-
+{% extends "base.html" %} {% block title %}Seguimiento Nutricional{% endblock %}
 {% block content %}
 
-    <div class="content">
-        Hello world
-    </div>
+<div class="content">
+  <div class="box">
+    <div id="chart" style="width: 600px; height: 400px;"></div>
+  </div>
 
+  <div class="box">contenido2</div>
+
+  <div class="box">contenido3</div>
+
+  <div class="box">contenido4</div>
+
+  <div class="box">contenido5</div>
+
+  <div class="box">contenido6</div>
+</div>
 
 {% endblock %}
