--- a/templates/base.html
+++ b/templates/base.html
@@ -11,12 +11,16 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
+    <script src="{{ url_for('static', filename='js/graficos.js') }}"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/echarts"></script>
+
     <title>Seguimiento Nutricional</title>
   </head>
   <body>
     <nav>
       <!-- Inicio -->
-      <i class="fa-duotone fa-solid fa-house active"></i>
+      <i class="fa-solid  fa-solid fa-house active"></i>
       <!-- Registro de comidas -->
       <i class="fa-solid fa-utensils"></i>
       <!-- Objetivos -->
@@ -24,9 +28,13 @@
       <!-- Historial -->
       <i class="fa-solid fa-clock-rotate-left"></i>
       <!-- Graficos -->
+
       <!-- Ajustes -->
+      <i class="fa-solid fa-user"></i>
+
       <!-- Perfil -->
       <!-- Cerrar sesion -->
+      <i class="fa-solid  fa-sign-out-alt"></i> <!-- Cerrar sesión -->
 
     </nav>
     {% block content %}{% endblock %}
