Rescructura de rutas y login y registro con datos_personales

--- a/templates/SeguimientoNutricional.html
+++ b/templates/SeguimientoNutricional.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} {% block title %}Seguimiento Nutricional{% endblock %}
 {% block content %}
+<script src="{{ url_for('static', filename='js/graficos.js') }}"></script>
 
 <div class="content">
   <div class="box">
