--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
-    <script src="{{ url_for('static', filename='js/graficos.js') }}"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/echarts"></script>
 
@@ -20,7 +19,9 @@
   <body>
     <nav>
       <!-- Inicio -->
-      <i class="fa-solid  fa-solid fa-house active"></i>
+      <a href="{{ url_for('home') }}">
+        <i class="fa-solid fa-solid fa-house active"></i>
+      </a>
       <!-- Registro de comidas -->
       <i class="fa-solid fa-utensils"></i>
       <!-- Objetivos -->
@@ -30,12 +31,16 @@
       <!-- Graficos -->
 
       <!-- Ajustes -->
-      <i class="fa-solid fa-user"></i>
 
       <!-- Perfil -->
+      <a href="{{ url_for('datos_personales') }}">
+        <i class="fa-solid fa-user"></i>
+      </a>
       <!-- Cerrar sesion -->
-      <i class="fa-solid  fa-sign-out-alt"></i> <!-- Cerrar sesión -->
-
+      <a href="{{ url_for('logout') }}">
+        <i class="fa-solid fa-sign-out-alt"></i>
+        <!-- Cerrar sesión -->
+      </a>
     </nav>
     {% block content %}{% endblock %}
   </body>
