--- a/templates/SeguimientoNutricional.html
+++ b/templates/SeguimientoNutricional.html
@@ -3,25 +3,42 @@
 <script src="{{ url_for('static', filename='js/graficos.js') }}"></script>
 <div>
   <!-- Header -->
-  <div class="header">
-    <div class="bienvenida">
-      <p>Hola , Nombre , Apellido</p>
-      <h1>Esta es tu dieta</h1>
-    </div>
+ 
 
-    <div class="perfil-usuario">
-      <img
-        src="https://cdn-icons-png.flaticon.com/512/6073/6073873.png"
-        alt=""
-      />
-    </div>
-  </div>
 
   <div class="content">
-    <h1>kkk</h1>
-    <div class="box">
-      <div id="chart" style="width: 600px; height: 400px"></div>
+    <div class="header">
+      <div class="bienvenida">
+        <p>Hola , Nombre , Apellido</p>
+        <h1>Esta es tu dieta</h1>
+      </div>
+  
+      <div class="perfil-usuario">
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/6073/6073873.png"
+          alt=""
+        />
+
+      </div>
     </div>
+
+    <div class="boxes">
+
+      <div class="box">
+        <div id="chart" style="width: 600px; height: 400px"></div> 
+
+      </div>
+      <div class="box"></div>
+      <div class="box"></div>
+
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      
+    </div>
+  
+
+    
   </div>
 </div>
 
