--- a/templates/platos.html
+++ b/templates/platos.html
@@ -51,7 +51,7 @@
                             <tr>
                                 <td>
                                     <span class="custom-checkbox">
-                                        <input type="checkbox" name="ids[]" value="{{ plato.id_plato }}" id="checkbox{{ loop.index }}">
+                                        <input type="checkbox" name="ids" value="{{ plato.id_plato }}" id="checkbox{{ loop.index }}">
                                         <label for="checkbox{{ loop.index }}"></label>
                                     </span>
                                 </td>
@@ -245,6 +245,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="{{ url_for('static', filename='js/select.js') }}"></script>
+<script src="{{ url_for('static', filename='js/delete_selected.js') }}"></script>
 <script src="{{ url_for('static', filename='js/checkbox_all.js') }}"></script>
 
 {% endblock %}
