--- a/templates/datos_personales.html
+++ b/templates/datos_personales.html
@@ -3,7 +3,15 @@
 {% block content %}
 <link href="{{ url_for('static', filename='css/login.css') }}" rel="stylesheet"/>
 
-<div class="content">
+<link
+href="{{ url_for('static', filename='css/form.css') }}"
+rel="stylesheet"
+/>
+
+<style>
+
+</style>
+<div class="contenedor-form ">
   <h1>Datos Personales</h1>
     
     <!-- Si hay un mensaje de éxito o error, se muestra aquí -->
@@ -64,7 +72,7 @@
         </div>
     </form>
 
-    <a href="{{ url_for('home') }}">Volver a la página principal</a>
+   
 </div>
 
 {% endblock %}
