--- a/templates/SeguimientoNutricional.html
+++ b/templates/SeguimientoNutricional.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Seguimiento Nutricional{% endblock %}
 {% block content %}
-<script src="{{ url_for('static', filename='js/graficos.js') }}"></script>
+<script src="{{ url_for('static', filename='js/estadisticas/estadistica_general.js') }}"></script>
 <div>
   <!-- Header -->
  
