--- a/static/css/platos.css
+++ b/static/css/platos.css
@@ -59,6 +59,7 @@
     z-index: 100;
     padding:2px;
     border-radius: 4px;
+    width: 300px;
     border: solid 1px #ced4da;
     display: none;
     margin: -1px;
