--- a/templates/SeguimientoNutricional.html
+++ b/templates/SeguimientoNutricional.html
@@ -9,7 +9,7 @@
   <div class="content">
     <div class="header">
       <div class="bienvenida">
-        <p>Hola , Nombre , Apellido</p>
+        <p>Hola, {{ nombre }}, {{ apellido }}</p>
         <h1>Esta es tu dieta</h1>
       </div>
   
