--- a/static/css/platos.css
+++ b/static/css/platos.css
@@ -1,114 +1,113 @@
 .badge {
-    background-color: gray !important;
-  }
-  
-  input[type="checkbox"] {
-      accent-color: green;
-      
-  }
-  
-  button.btn.btn-info  {
-      background-color:green;
-      color: white;
-      border: none;
-  }
-  
-  small {
-      color: red;
-  }
+  background-color: gray !important;
+}
 
+input[type="checkbox"] {
+  accent-color: green;
+}
 
-  .multiselect-dropdown{
-    display: inline-block;
-    border-radius: 4px;
-    width:40vw !important;
-    max-width: 450px !important;
-    height:5vh !important;
-    border: solid 1px #ced4da;
-    background-color: white;
-    position: relative;
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
-    background-repeat: no-repeat;
-    background-position: right .75rem center;
-    background-size: 16px 12px;
-  }
-  .multiselect-dropdown span.optext, .multiselect-dropdown span.placeholder{
-    border-radius: 4px; 
-    display:inline-block;
-    
-  }
-  
-  .multiselect-dropdown span.placeholder {
-    color:transparent;
-  }
-  .multiselect-dropdown span.optext{
-    background-color:lightgray;
-    padding:1px 0.75em; 
-    margin:2px;
-  }
-  .multiselect-dropdown span.optext  {
-    float: right;
-    font-size: 1em;
-    margin-top: 2px;
-    cursor: pointer;
-    color: #666;
-  }
-  
-  .multiselect-dropdown-list-wrapper{
-    box-shadow: gray 0 3px 8px;
-    z-index: 100;
-    padding:2px;
-    border-radius: 4px;
-    width: 300px;
-    border: solid 1px #ced4da;
-    display: none;
-    margin: -1px;
-    position: absolute;
-    top:0;
-    left: 0;
-    right: 0;
-    background: white;
-  }
-  .multiselect-dropdown-list-wrapper .multiselect-dropdown-search{
-    margin-bottom:5px;
-  }
-  .multiselect-dropdown-list{
-    padding:2px;
-    height: 15rem;
-    overflow-y:auto;
-    overflow-x: hidden;
-  }
-  .multiselect-dropdown-list::-webkit-scrollbar {
-    width: 6px;
-  }
-  .multiselect-dropdown-list::-webkit-scrollbar-thumb {
-    background-color: #bec4ca;
-    border-radius:3px;
-  }
-  
-  .multiselect-dropdown-list div{
-    padding: 5px;
-  }
-  .multiselect-dropdown-list input{
-    height: 1.15em;
-    width: 1.15em;
-    margin-right: 0.35em;  
-  }
+button.btn.btn-info {
+  background-color: green;
+  color: white;
+  border: none;
+}
 
-  .multiselect-dropdown-list div:hover{
-    background-color: #ced4da;
-  }
-  .optdel {
-    padding:10px;
-  }
-  .multiselect-dropdown span.maxselected {
-    width:98%;
-    text-align: center;
-  }
-  .multiselect-dropdown-all-selector {border-bottom:solid 1px #999;};
+small {
+  color: red;
+}
 
+.multiselect-dropdown {
+  display: inline-block;
+  border-radius: 4px;
+  width: 40vw !important;
+  max-width: 450px !important;
+  height: 5vh !important;
+  border: solid 1px #ced4da;
+  background-color: white;
+  position: relative;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-position: right 0.75rem center;
+  background-size: 16px 12px;
+}
+.multiselect-dropdown span.optext,
+.multiselect-dropdown span.placeholder {
+  border-radius: 4px;
+  display: inline-block;
+}
 
-  /* Estilos generales del contenedor */
+.multiselect-dropdown span.placeholder {
+  color: transparent;
+}
+.multiselect-dropdown span.optext {
+  background-color: lightgray;
+  padding: 1px 0.75em;
+  margin: 2px;
+}
+.multiselect-dropdown span.optext {
+  float: right;
+  font-size: 1em;
+  margin-top: 2px;
+  cursor: pointer;
+  color: #666;
+}
+
+.multiselect-dropdown-list-wrapper {
+  box-shadow: gray 0 3px 8px;
+  z-index: 100;
+  padding: 2px;
+  border-radius: 4px;
+  width: 300px;
+  border: solid 1px #ced4da;
+  display: none;
+  margin: -1px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: white;
+}
+.multiselect-dropdown-list-wrapper .multiselect-dropdown-search {
+  margin-bottom: 5px;
+}
+.multiselect-dropdown-list {
+  padding: 2px;
+  height: 15rem;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.multiselect-dropdown-list::-webkit-scrollbar {
+  width: 6px;
+}
+.multiselect-dropdown-list::-webkit-scrollbar-thumb {
+  background-color: #bec4ca;
+  border-radius: 3px;
+}
+
+.multiselect-dropdown-list div {
+  padding: 5px;
+}
+.multiselect-dropdown-list input {
+  height: 1.15em;
+  width: 1.15em;
+  margin-right: 0.35em;
+}
+
+.multiselect-dropdown-list div:hover {
+  background-color: #ced4da;
+}
+.optdel {
+  padding: 10px;
+}
+.multiselect-dropdown span.maxselected {
+  width: 98%;
+  text-align: center;
+}
+.multiselect-dropdown-all-selector {
+  border-bottom: solid 1px #999;
+}
+
+/* Estilos generales del contenedor */
 .multiselect {
   position: relative;
   width: 100%;
@@ -127,8 +126,6 @@
   gap: 8px;
   margin-bottom: 8px;
 }
-
-
 
 /* Estilo para la 'x' de eliminar una opción seleccionada */
 .selected-options .optdel {
@@ -217,15 +214,7 @@
   color: #888;
 }
 
-
 .table-wrapper {
-        min-height: 600px; /* Ajusta según el promedio de altura de tu tabla llena */
-}
-
-
-.center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  min-height: 600px; /* Ajusta según el promedio de altura de tu tabla llena */
 }
 
