Añadir nuevos estilos para botones de navegación y actualizar plantillas HTML para mejorar la usabilidad en las secciones de Platos e Ingredientes.

--- a/templates/ingredientes/read_ingredientes.html
+++ b/templates/ingredientes/read_ingredientes.html
@@ -2,6 +2,20 @@
 <div class="center">
     <div class="container mt-4">
         <!-- Header -->
+        <div class="botones-arriba">
+            <a href="{{ url_for('platos') }}"
+            class="{% if request.endpoint == 'platos' %}boton-activo{% else %}boton-inactivo{% endif %}">
+            Platos
+         </a>
+         
+         <a href="{{ url_for('ingredientes') }}"
+            class="{% if request.endpoint == 'ingredientes' %}boton-activo{% else %}boton-inactivo{% endif %}">
+            Ingredientes
+         </a>
+         
+
+        </div>
+        
         <div class="table-wrapper">
             <div class="table-title">
                 <div class="row">
