--- a/static/css/SeguimientoNutricional.css
+++ b/static/css/SeguimientoNutricional.css
@@ -286,3 +286,37 @@ nav a i {
   font-size: 10px;
   margin-bottom: 20px;
 }
+
+.botones-arriba {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.botones-arriba a {
+  display: inline-block;
+  padding: 12px 20px;
+  margin: 8px;
+  border-radius: 9999px;
+  font-weight: bold;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  max-width: fit-content;
+  text-decoration: none;
+  border: 2px solid #10b981;
+}
+
+
+.boton-activo {
+  background-color: #10b981;
+  color: white;
+}
+
+.boton-inactivo {
+  background-color: white;
+  color: #10b981;
+}
+
+.boton-estadistica:hover {
+  transform: scale(1.05);
+}
