--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
             <span>Cuenta</span>
           </a>
 
-          <a href="" class="{% if request.path == '/calendario' %}active{% endif %}">
+          <a href="{{ url_for('platos') }}" class="{% if request.path == '/comidas' %}active{% endif %}">
             <i class="fas fa-solid fa-utensils"></i>
             <span>Comidas</span>
           </a>
