--- a/templates/usuario_configuracion/cambiar_contraseña.html
+++ b/templates/usuario_configuracion/cambiar_contraseña.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "usuario_configuracion/base.html" %}
 {% block title %}Datos Personales{% endblock %}
 {% block content %}
 <link href="{{ url_for('static', filename='css/login.css') }}" rel="stylesheet"/>
